--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,6 +46,15 @@
                         {% endif %}
                     </ul>
                 </li>
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Event Frames <span class = "caret"></span></a>
+                    <ul class = "dropdown-menu">
+                        <li><a href = "{{ url_for("eventFrames.selectEventFrame") }}">Event Frames</a></li>
+                        {% if current_user.isAdministrator() %}
+                            <li><a href = "{{ url_for("eventFrameAttributes.exportEventFrameAttributes") }}">Export</a></li>
+                        {% endif %}
+                    </ul>
+                </li>
+                <li><a href = {{ "" | grafanaUrl() }} target = "_blank">Grafana</a></li>
                 {% if config["IS_RASPBERRY_PI"] and current_user.isAdministrator() %}
                     <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Raspberry Pi <span class = "caret"></span></a>
                         <ul class = "dropdown-menu">
@@ -57,12 +66,6 @@
                         </ul>
                     </li>
                 {% endif %}
-                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Event Frames <span class = "caret"></span></a>
-                    <ul class = "dropdown-menu">
-                        <li><a href = "{{ url_for("eventFrames.selectEventFrame") }}">Event Frames</a></li>
-                    </ul>
-                </li>
-                <li><a href = {{ "" | grafanaUrl() }} target = "_blank">Grafana</a></li>
             </ul>
             {% endif %}
             <ul class = "nav navbar-nav navbar-right">
