--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,3 +1,9 @@
 .has-note {
     background-color: #b7feb8;
 }
+
+tfoot input {
+    width: 100%;
+    padding: 3px;
+    box-sizing: border-box;
+}
